--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <head>
     <title> STOR 565 Final Project </title>
+    <h1> Behavioral Economics and Consumer Decisions <h1>
 <head>
     
 <body>
-    <em> Behavioral Economics and Consumer Decisions </em>
+    <em> Objective </em>
     <p> Our research will be focused on accurately predicting consumer behavior duing various macro/microeconomis conditions. We will be using econnomic/business models, consumer data, and various psychology behavioral economic theories to analyze and predict consumer behavior </p>
     <br>
     <p> We will be using various methods of exploratoy data analysis and unserpervised learning to make logically founded hypothesis in conditional consumer behaviors. <p>
 <body>
 
 <table>
-    <tr><th> Unsupervized Learning </th><th> PCA <tr><th> PCR </th><th> PLS <tr><th> K-Means </th></tr> 
+    <tr><th> Unsupervized Learning </th><th> PCA <th></th> PCR </th><th> PLS </th><th> K-Means </th></tr> 
     <tr><td> Result </td><td> </td><td> </td><td> </td><td> </td></tr>
 </table>
 
 <table>
-    <tr><th> Parametric Models </th><th> Lasso <tr><th> Ridge </th><th> Polynomial <tr><th> LDA </th><th> QDA </th></tr> 
+    <tr><th> Parametric Models </th><th> Lasso </th><th> Ridge </th><th> Polynomial </th><th> LDA </th><th> QDA </th></tr> 
     <tr><td> Prediction Accuracy </td><td> </td><td> </td><td> </td><td> </td><td> </td></tr>
     <tr><td> Directory </td><td> </td><td> </td><td> </td><td> </td><td> </td></tr>
 </table>
 
 <table>
-    <tr><th> Non-Parametric Models </th><th> Random Forests <tr><th> SVM </th><th> Nueral Networks </th></tr> 
-    <tr><td> Prediction Accuracy </th><th> <tr><th> </th><th> </th></tr> 
-    <tr><td> Directory </th><th> <tr><th> </th><th> </th></tr> 
+    <tr><th> Non-Parametric Models </th><th> Random Forests </th><th> SVM </th><th> Nueral Networks </th></tr> 
+    <tr><td> Prediction Accuracy </td><td> </td><td> </td><td> </td></tr> 
+    <tr><td> Directory </td><td> </td><td> </td><td> </td></tr> 
 </table>
 
