--- a/index.html
+++ b/index.html
@@ -1,29 +1,80 @@
 <head>
     <title> STOR 565 Final Project </title>
-    <h1> Behavioral Economics and Consumer Decisions <h1>
-<head>
-    
+    <h1> Behavioral Economics and Consumer Decisions </h1>
+</head>
+<br>
 <body>
     <em> Objective </em>
     <p> Our research will be focused on accurately predicting consumer behavior duing various macro/microeconomis conditions. We will be using econnomic/business models, consumer data, and various psychology behavioral economic theories to analyze and predict consumer behavior </p>
     <br>
     <p> We will be using various methods of exploratoy data analysis and unserpervised learning to make logically founded hypothesis in conditional consumer behaviors. <p>
-<body>
-
+</body>
+<br>
 <table>
-    <tr><th> Unsupervized Learning </th><th> PCA <th></th> PCR </th><th> PLS </th><th> K-Means </th></tr> 
-    <tr><td> Result </td><td> </td><td> </td><td> </td><td> </td></tr>
+    <tr>
+        <th> Unsupervized Learning: </th>
+        <th> PCA </th>
+        <th> PCR </th>
+        <th> PLS </th>
+        <th> K-Means </th>
+    </tr> 
+    <tr>
+        <td> Result </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td> 
+    </tr>
 </table>
-
+</br>
 <table>
-    <tr><th> Parametric Models </th><th> Lasso </th><th> Ridge </th><th> Polynomial </th><th> LDA </th><th> QDA </th></tr> 
-    <tr><td> Prediction Accuracy </td><td> </td><td> </td><td> </td><td> </td><td> </td></tr>
-    <tr><td> Directory </td><td> </td><td> </td><td> </td><td> </td><td> </td></tr>
+    <tr>
+        <th> Parametric Models: </th>
+        <th> Lasso </th>
+        <th> Ridge </th>
+        <th> Polynomial </th>
+        <th> LDA </th>
+        <th> QDA </th>
+    </tr> 
+    <tr>
+        <td> Prediction Accuracy </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+    </tr> 
+    <tr>
+        <td> Directory </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+    </tr> 
 </table>
-
+<br>
 <table>
-    <tr><th> Non-Parametric Models </th><th> Random Forests </th><th> SVM </th><th> Nueral Networks </th></tr> 
-    <tr><td> Prediction Accuracy </td><td> </td><td> </td><td> </td></tr> 
-    <tr><td> Directory </td><td> </td><td> </td><td> </td></tr> 
+    <tr>
+        <th> Non-Parametric Models: </th>
+        <th> Random Forests </th>
+        <th> SVM </th>
+        <th> Nueral Networks </th>
+    </tr> 
+    <tr>
+        <td> Prediction Accuracy </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+    </tr>
+    <tr>
+        <td> Directory </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+    </tr>
 </table>
+table {width:400px;}
+th {text-align: left;}
+table,th,td {border: 1px solid #000; border-collapse: collapse;}
 
